// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AddGroupsToTeamModal should match snapshot 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`components/AddGroupsToTeamModal should match when renderOption is called 1`] = `
<div
  className="more-modal__row clickable "
  onClick={[Function]}
  onMouseMove={[Function]}
>
  <img
    alt="group picture"
    className="more-modal__image"
    height="32"
    src={null}
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      <Nbsp />
      -
      <Nbsp />
      <span
        className="more-modal__name_sub"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{num, number} {num, plural, one {member} other {members}}"
          id="numMembers"
          values={
            Object {
              "num": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <div
      className="more-modal__actions--round"
    >
      <i
        className="icon icon-plus"
      />
    </div>
  </div>
</div>
`;

exports[`components/AddGroupsToTeamModal should match when renderOption is called 2`] = `
<div
  className="more-modal__row clickable more-modal__row--selected"
  onClick={[Function]}
  onMouseMove={[Function]}
>
  <img
    alt="group picture"
    className="more-modal__image"
    height="32"
    src={null}
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      <Nbsp />
      -
      <Nbsp />
      <span
        className="more-modal__name_sub"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{num, number} {num, plural, one {member} other {members}}"
          id="numMembers"
          values={
            Object {
              "num": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <div
      className="more-modal__actions--round"
    >
      <i
        className="icon icon-plus"
      />
    </div>
  </div>
</div>
`;
